Fix vertical scrollbar issue

--- a/packages/mathjax-extension/style/base.css
+++ b/packages/mathjax-extension/style/base.css
@@ -4,3 +4,7 @@
 |----------------------------------------------------------------------------*/
 
 @import './fonts.css';
+
+mjx-assistive-mml {
+  bottom: 0;
+}
